// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ClickConfirm - example in dockit example in dockit 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="containerID"
  style={Object {}}
  title={null}
>
  <ClickConfirm
    id="uuOID"
    key="uuOID"
    ref_={[Function]}
  />
  <TouchIcon
    colorSchema="pink"
    content="open"
    icon="mdi-verified"
    id="uuID"
    key="uuID"
    onClick={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.ClickConfirm ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm className="my-classname" 1`] = `
<Div
  className="uu5-bricks-click-confirm my-classname uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm className="test-classname" 1`] = `
<Div
  className="uu5-bricks-click-confirm test-classname uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="brown" 1`] = `
<Div
  className="color-schema-brown uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="brown-rich" 1`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="cyan" 1`] = `
<Div
  className="color-schema-cyan uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="cyan-rich" 1`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="default" 1`] = `
<Div
  className="color-schema-default uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="green" 1`] = `
<Div
  className="color-schema-green uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="green-rich" 1`] = `
<Div
  className="color-schema-green-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="grey" 1`] = `
<Div
  className="color-schema-grey uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="grey-rich" 1`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="orange" 1`] = `
<Div
  className="color-schema-orange uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="orange-rich" 1`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="pink" 1`] = `
<Div
  className="color-schema-pink uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="pink-rich" 1`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="purple" 1`] = `
<Div
  className="color-schema-purple uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="purple-rich" 1`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="red" 1`] = `
<Div
  className="color-schema-red uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="red-rich" 1`] = `
<Div
  className="color-schema-red-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="yellow" 1`] = `
<Div
  className="color-schema-yellow uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema="yellow-rich" 1`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm default props 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled=false 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden uu5-common-disabled"
  disabled={true}
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled=true 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden uu5-common-disabled"
  disabled={true}
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-click-confirm uu-fulltextsearch-0 uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden=false 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden=true 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm id="myId" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="myId"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm id="test-id" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="test-id"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm name="myName" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  name="myName"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBox"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="box"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="box"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="boxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="container" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="inline" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="inline"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="inline" 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="inline"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="smallBox" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="smallBox"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="smallBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-noindex uu-fulltextsearch-0 uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noPrint=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noPrint=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected=false 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected=true 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden uu5-common-selected"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  id="uuID"
  nestingLevel="bigBoxCollection"
  style={Object {}}
  title="My Tooltip"
/>
`;
